<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryShadeDarkColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"
        android:fadingEdgeLength="48dp"
        android:overScrollMode="never"
        android:requiresFadingEdge="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="64dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_rect_shade_color"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="16dp">

                <TextView
                    style="@style/TextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/backup_title"
                    android:textColor="?attr/primaryColor" />

                <TextView
                    style="@style/TextSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="8dp"
                    android:text="@string/backup_explainer" />

                <TextView
                    android:id="@+id/backupExport"
                    style="@style/TextSmallBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="10dp"
                    android:text="@string/backup_export" />

                <TextView
                    android:id="@+id/backupImport"
                    style="@style/TextSmallBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="10dp"
                    android:text="@string/backup_import" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp">

                    <TextView
                        style="@style/TextSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="80dp"
                        android:paddingVertical="8dp"
                        android:text="@string/backup_keep_copy"
                        android:textColor="?attr/primaryColor" />

                    <TextView
                        android:id="@+id/backupKeepCopy"
                        style="@style/TextSmallBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="10dp"
                        android:text="@string/off" />
                </FrameLayout>

                <TextView
                    android:id="@+id/backupRestoreVault"
                    style="@style/TextSmallBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="10dp"
                    android:text="@string/backup_restore_vault" />

                <TextView
                    android:id="@+id/status"
                    style="@style/TextSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="8dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
