<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryShadeDarkColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"
        android:fadingEdgeLength="48dp"
        android:overScrollMode="never"
        android:requiresFadingEdge="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="64dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded_rect_shade_color"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="16dp">

                <TextView
                    style="@style/TextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/gestures"
                    android:textColor="?attr/primaryColor" />

                <LinearLayout
                    android:id="@+id/gestureList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/gestureCheatSheet"
                    style="@style/TextSmallBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/gesture_cheat_sheet" />

                <TextView
                    android:id="@+id/gestureExport"
                    style="@style/TextSmallBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="8dp"
                    android:text="@string/gesture_export" />

                <TextView
                    android:id="@+id/gestureImport"
                    style="@style/TextSmallBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="8dp"
                    android:text="@string/gesture_import" />

                <TextView
                    android:id="@+id/gestureReset"
                    style="@style/TextSmallBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingVertical="8dp"
                    android:text="@string/gesture_reset" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
